# xwallet

./: Cargo.toml  ReadMe.md
docs/: Product.md  api.md  packages.md  services.md
proto/: auth.proto  notify.proto  onboard.proto  transaction.proto  user.proto  wallet.proto
src/: build.rs  main.rs  schema.rs
src/config/: env.rs  logger.rs  mod.rs
src/integration/: mod.rs
src/integration/termii/: consts.rs  mod.rs  sendMsg.rs
src/models/: country.rs  mod.rs  networks.rs  transactions.rs  user.rs
src/models/country/: list.rs  mod.rs
src/models/networks/: mod.rs
src/models/user/: dtos.rs  mod.rs  user.rs
src/modules/: mod.rs
src/modules/app/: api_docs.rs  app.rs  g_docs.rs  g_test.rs  graphql.rs  mod.rs
src/modules/app/grapgql/: g_sub.rs  jun.rs  jun_exe.rs
src/modules/app/uto/: api_key.rs  log_api.rs  main.rs
src/modules/auth/: dtos.rs  errors.rs  mod.rs  routes.rs  services.rs  traits.rs
src/modules/compliance/: mod.rs  routes.rs  services.rs  traits.rs
src/modules/fx/: mod.rs  routes.rs  services.rs  traits.rs
src/modules/notification/: email_svc.rs  lettre.rs  mod.rs  services.rs  traits.rs
src/modules/payments/: mod.rs  routes.rs  services.rs  traits.rs
src/modules/transactions/: mod.rs  routes.rs  services.rs  traits.rs
src/modules/user/: routes.rs  services.rs  traits.rs
src/modules/wallet/: mod.rs  routes.rs
src/routes/: app.rs  auth.rs  mod.rs  wallet.rs
src/services/: notification.rs
src/services/notification/: mod.rs
src/services/user/: model.rs
