[package]
name = "xwallet"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.7"
actix-web-lab = "0.20"
chrono = "0.4"
log= "0.4.20"
serde = {version = "^1" , features = ["derive"]}
serde_json = "1.0.107"
serde_yaml = "0.9.25"
sqlx= {version= "0.7.2", features= ["postgres", "runtime-tokio-rustls"]}
dotenvy = "0.15.6"
env_logger = "0.11"
diesel = { version = "2.1.3", features = ["postgres", "chrono"] }
juniper = "0.15.12"

[package.metadata.scripts]
db_setup = "diesel migration setup"
db_migrate = "diesel migration run"
db_create = "diesel migration run"
db_rollback = "diesel migration revert"
db_redo = "diesel migration redo"
