[package]
name = "xwallet"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.7"
actix-web-lab = "0.20"
chrono = { version = "0.4", features = ["serde"] }
log= "0.4.20"
fern = "0.6"
serde = {version = "1.0.197" , features = ["derive"]}
serde_json = "1.0.114"
serde_yaml = "0.9.25"
sqlx= {version= "0.7.2", features= ["postgres", "runtime-tokio-rustls"]}
dotenvy = "0.15.6"
env_logger = "0.11"
diesel = { version = "2.1.3", features = ["postgres", "chrono"] }
juniper = "0.15.12"
juniper_actix = "0.4.0"
# tokio = {version = "1.36.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.11.0"
prost = "0.12.3"
lettre = "0.11.4"
lettre_email = "0.9.4"
# DEPENDENCIES SPECIFIC TO AUTH
actix-web-httpauth = "0.8.1"
argonautica = "0.2.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.8"


[build.dependencies]
tonic-build = "0.11.0"

[package.metadata.scripts]
db_setup = "diesel migration setup"
db_migrate = "diesel migration run"
db_create = "diesel migration run"
db_rollback = "diesel migration revert"
db_redo = "diesel migration redo"
